# MRQy

./: .dockerignore  .gitignore  .travis.yml  CodeOfConduct.md  ContributingGuidelines.md  Dockerfile  LICENSE.txt  MANIFEST.in  Pipfile  QC.py  QCF.py  README.md  README.rst  TAGS.yaml  compose.yml  index.html  pyproject.toml  requirements.txt  setup.py
CT/: QC.py
New_MRQy/: QC.py
New_MRQy/Input_Data/: series-data1710594963891.csv
New_MRQy/Input_Data/manifest-1710594991352/: metadata.csv
New_MRQy/UserInterface/: index.html
New_MRQy/UserInterface/css/: index.css
New_MRQy/UserInterface/scripts/: table_init.js  (+1 more)
RhinoHealth/: Dockerfile  README.md  run-mrqy.sh
UserInterface/: index.html
UserInterface/css/: index.css
UserInterface/scripts/: chart_init.js  data_load.js  global_config.js  global_vars.js  image_init.js  index.js  select_mode.js  table_init.js  table_init_meas.js  tsne_init.js  umap_init.js
css/: index.css
d3-3.5.17/: d3.js
mrqy/: QC4d.py  QCF.py
radqy/: MRI_TAGS.yaml  radqy.py
radqy/UserInterface/: index.html
scripts/: chart_init.js  image_init.js  index.js  table_init_meas.js
src/mrqy/: QC.py  QC4d.py  QCF.py
templates/: CPTAC_GBM_MRQy_Results.tsv  CPTAC_GBM_MRQy_Results.xlsx  TCGA_CESC(T1)_MRQy_Results.tsv  TCGA_CESC(T1)_MRQy_Results.xlsx  TCGA_CESC(T2)_MRQy_Results.tsv  TCGA_CESC(T2)_MRQy_Results.xlsx  TCGA_GBM_MRQy_Results.tsv  TCGA_GBM_MRQy_Results.xlsx  TCGA_GBM_results.tsv
tests/: test_QC.py
tests/TCIA/: C3N-01342.mha  C3N-01871.mha  C3N-01875.mha  C3N-01876.mha  C3N-02631.mha  C3N-02639.mha  C3N-02679.mha
(+272 files in other folders)
